# Scientific-programming-for-Engineer

./: .gitignore  README.md  SP4E18.sublime-project
exercises/: .gitignore
exercises/week1/python-hello/sources/: hello.py  main.py  series.py
exercises/week1/python-hello/sources-solution/: hello-exo1.py  hello-exo2.py  series.py
exercises/week10/: generate_input.py
exercises/week10/correction/: CMakeLists.txt  ping_pong_ball.cc  ping_pong_balls_factory.cc  vector.hh
exercises/week10/starting_point/: CMakeLists.txt  compute_contact.cc  compute_contact.hh  compute_interaction.cc  system.cc  test_kepler.cc  vector.hh
exercises/week11/particle-trajectory-optimization/correction/: compute_contact.cc  compute_gravity.hh  csv_reader.cc  main.cc  solution.py
exercises/week12/starting_point/: CMakeLists.txt  main.cc
exercises/week13/starting_point/: CMakeLists.txt  compute_temperature.hh  planet.cc  test_fft.cc  test_kepler.cc
exercises/week14/particle-pybind/starting_point/: CMakeLists.txt  compute_temperature.cc  compute_temperature.hh  compute_verlet_integration.cc  main.py  material_points_factory.hh  matrix.hh  system.cc  test_fft.cc
exercises/week2/float/sources/: main.cc
exercises/week2/float/sources-solution/: main.cc
exercises/week2/hello/sources/: CMakeLists.txt  hello.cc  series.cc  series.hh
exercises/week2/hello/sources-solution/: hello.cc  series.cc  series.hh
exercises/week2/pi/sources/: main.cc
exercises/week2/pi/sources-solution/: CMakeLists.txt  main.cc
exercises/week3/stl/solution/: CMakeLists.txt  algorithms.cc  main.cc  memory.cc
exercises/week3/stl/starting_point/: CMakeLists.txt  empty_main.cc  memory_first.cc  memory_second.cc  memory_third.cc
exercises/week4/conjugate_gradient/sources-solution/: Readme.md  conjugate_gradient.py  main.py  optimizer.py
exercises/week4/matplotlib/: data.plot
exercises/week4/matplotlib/sources-solution/: data.plot  exo.py  generate-data.py
exercises/week5/series/sources-solution/: compute_algebraic.py  compute_pi.py  dumper_series.py  main.py  plot_series.py  print_series.py  series.py
exercises/week6/series/sources-solution/: CMakeLists.txt
exercises/week7/paraview/files/: PlanetMess.pvsm  step-0000.csv  step-0001.csv  step-0002.csv  step-0003.csv  step-0004.csv  step-0005.csv  step-0006.csv  step-0007.csv  step-0008.csv  step-0009.csv  step-0010.csv  step-0011.csv  step-0012.csv  step-0013.csv  step-0014.csv  step-0015.csv  step-0016.csv  step-0017.csv  step-0018.csv  step-0019.csv  step-0020.csv  step-0021.csv  step-0022.csv  step-0023.csv  step-0024.csv  step-0025.csv  step-0026.csv  step-0027.csv  step-0028.csv  step-0029.csv  step-0030.csv  step-0031.csv  step-0032.csv  step-0033.csv  step-0034.csv  step-0035.csv  step-0036.csv  step-0037.csv  step-0038.csv  (+326 more)
exercises/week8/particles/solution/: compute_boundary.cc  compute_contact.cc  my_types.hh  planet.cc  planets_factory.cc  (+1 more)
exercises/week8/particles/starting_point/: CMakeLists.txt  compute_gravity.cc  compute_verlet_integration.cc  csv_reader.cc  csv_writer.cc  main.cc  particle.cc  particles_factory_interface.cc  planets_factory.cc  system.cc  system.hh  system_evolution.cc  vector.cc  vector.hh
lectures/: list-package-Debian.txt  week1.html  week10.html  week11.html  week2.html  week3.html  week4.html  week5.html  week6.html  week7.html  week8.html  week9.html
lectures/code_snippets/: CMakeLists.txt  array.cpp  cats_and_dogs.py  fixture_test.cc  fixture_test.py  for_each.cpp  fstream.cpp  hello.cpp  iostream.cpp  lambda.cpp  loops.cpp  map.cpp  mysqrt_test.cc  new.cpp  scientific_precision.cpp  set.cpp  shared_pointers.cpp  sstream.cpp  sstream_main_arguments.cpp  string.cc  super_cool_class.py  test_mysqrt.py  unique_pointers.cpp  vector.cpp
lectures/pybind_lecture/: CMakeLists.txt  pyexample.cpp  pyexample_pybind.cpp  test.py
lectures/week12-eigen_lecture/: CMakeLists.txt  main.cc
work/: .gitignore
work/week1/: test.cpp
work/week10/: test_speed.cc
work/week10/starting_point/: CMakeLists.txt  compute_gravity.hh  compute_verlet_integration.cc  compute_vertical_gravity.hh  export_correction.sh  generate_input.py  particle.classes  particles.classes  ping_pong_ball.cc  planet.cc  step-00000.csv  system.hh  system_evolution.cc  vector.cc  vector.hh
work/week12/notebook/: poisson_problem.ipynb
work/week12/starting_point/: CMakeLists.txt  README.md  compute_temperature.cc  compute_temperature.hh  compute_temperature_boundaries.cc  compute_temperature_boundaries.hh  fft.hh  generate_input.py  main.cc  material_point.cc  material_point.hh  material_points_factory.cc  material_points_factory.hh  matrix.hh  particles_factory_interface.cc  system_evolution.cc  test_computeFrequencies_n_8.txt  test_computeFrequencies_n_9.txt  test_fftfreq.py  test_heat_equation_fft.cc
work/week13/starting_point/: CMakeLists.txt  compute_boundary.cc  compute_contact.cc  compute_gravity.cc  compute_temperature_finite_differences.cc  compute_temperature_finite_differences.hh  compute_verlet_integration.cc  fft.hh
work/week14/particle-pybind/starting_point/: CMakeLists.txt  README.md  compute_boundary.cc  compute_gravity.cc  compute_temperature.cc  compute_temperature.hh  csv_writer.cc  generate_input.py  main.cc  material_points_factory.cc  matrix.hh  particles_factory_interface.cc  particles_factory_interface.hh  ping_pong_balls_factory.cc  planets_factory.cc  pypart_pybind.cpp  test_fft.cc  vector.hh
work/week3/stl/starting_point/: CMakeLists.txt  empty_main.cc  ex1.cc  ex2.cc  ex3.cc  ex5.cc  ex6.cc  memory_first.cc  memory_second.cc  memory_third.cc
work/week4/conjugate_gradient/: conjugate_gradient.py  optimizer.py
work/week5/series/: dumper.py  series.py
work/week7/: ClassDesign_Help.rtf
work/week9/particles/: .gitignore
work/week9/particles/starting_point/: CMakeLists.txt  compute_gravity.cc  compute_gravity.hh  compute_verlet_integration.cc  csv_writer.cc  main.cc  particle.cc  particle.hh  ping_pong_ball.cc  planet.cc  system.cc  system_evolution.cc  test_csv.cc  test_reader.csv  test_test.cc  vector.cc  vector.hh
(+86 files in other folders)
